Closed
Bug 390446
Opened 18 years ago
Closed 18 years ago
Javascript is still disabled after leaving a page that had designMode on
Categories
(Core :: DOM: Editor, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla1.9beta2
People
(Reporter: martijn.martijn, Assigned: peterv)
References
Details
(Keywords: regression, testcase, Whiteboard: [dbaron-1.9:RwCc])
Attachments
(2 files, 1 obsolete file)
|
635 bytes,
text/html
|
Details | |
|
11.45 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
See testcase, the page should get a green background color, it should not have a red background color.
This regressed when bug 237964 was checked in.
Flags: blocking1.9?
Flags: blocking1.9? → blocking1.9+
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → peterv
Whiteboard: [dbaron-1.9:RwCc]
| Assignee | ||
Comment 1•18 years ago
|
||
Priority: -- → P2
| Assignee | ||
Comment 2•18 years ago
|
||
Attachment #286037 -
Attachment is obsolete: true
Attachment #287858 -
Flags: superreview?(jst)
Attachment #287858 -
Flags: review?(jst)
Updated•18 years ago
|
Attachment #287858 -
Flags: superreview?(jst)
Attachment #287858 -
Flags: superreview+
Attachment #287858 -
Flags: review?(jst)
Attachment #287858 -
Flags: review+
| Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: in-testsuite?
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M10
| Reporter | ||
Comment 3•18 years ago
|
||
Verified fixed, using:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007111404 Minefield/3.0b2pre
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•