Fix for bug 390446 (Javascript is still disabled after leaving a page that had designMode on). r/sr=jst.