editor/composer/src/nsEditingSession.h
@@ -132,6 +132,8 @@ protected:
   PRPackedBool    mInteractive;
   PRPackedBool    mMakeWholeDocumentEditable;
 
+  PRPackedBool    mDisabledJSAndPlugins;
+
   // True if scripts were enabled before the editor turned scripts
   // off, otherwise false.
   PRPackedBool    mScriptsEnabled;
